# pisynth

./: CMakeLists.txt  README.md
include/: banner.h  instrument.h  noteoscillator.h  notes.h  oscillator.h
src/: instrument.cpp  main.cpp  noteoscillator.cpp  oscillator.cpp
